Micky: Fixed z-index for createTeam

--- a/web/src/Pages/LandingPage/Sections/LandingHero.module.css
+++ b/web/src/Pages/LandingPage/Sections/LandingHero.module.css
@@ -90,6 +90,8 @@
   -webkit-box-shadow: 0px 4px 15px -7px rgba(0, 0, 0, 0.66);
   -moz-box-shadow: 0px 4px 15px -7px rgba(0, 0, 0, 0.66);
   box-shadow: 0px 4px 15px -7px rgba(0, 0, 0, 0.66);
+  position: relative;
+  z-index: 10;
   overflow: hidden;
 }
 
